Text align bug fixed

--- a/sgj-portfolio/src/app/page/page.component.scss
+++ b/sgj-portfolio/src/app/page/page.component.scss
@@ -17,14 +17,13 @@ a{
 }
 
 .info{
-    text-align: justify;
+    width: 50%;
     margin: 0 auto;
-    width: 50em;
 }
 
 #mypicture{
     display: flex;
     margin-left: auto;
     margin-right: auto;
-    width: 30%;
+    width: 20%;
 }
